# lunchlog

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/receipts/: models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/receipts/migrations/: 0001_initial.py  0002_remove_receipt_price_positive_and_more.py
apps/receipts/tests/: factories.py  fixtures.py  test_receipts.py
apps/restaurants/: models.py  serializers.py  urls.py  views.py
apps/restaurants/management/commands/: create_fake_data.py
apps/restaurants/migrations/: 0001_initial.py
apps/restaurants/services/: google_place_services.py  recommendation_service.py
apps/restaurants/tests/: factories.py  fixture.py  test_restaurants.py
apps/users/: models.py  roles.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  fixtures.py  test_users.py
common/: pagination.py  permissions.py
config/: settings.py  storage_backends.py  urls.py
config/settings/: base.py  dev.py
